--- a/src/Styles/Footer.css
+++ b/src/Styles/Footer.css
@@ -5,7 +5,8 @@
     background-color: white;
     padding: 20px 20px;
     text-align: center;
-     position: fixed;
+     position: relative;
+    
     bottom: 0;
 
 }
